# DNNAndroidClient

./: .gitmodules  DnnClientUML  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dnnproject/android/dnnandroidclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-dnn-model.cpp  native-lib.cpp
app/src/main/java/com/dnnproject/android/dnnandroidclient/: DNNService.java  DNNServiceThread.java  DnnAboutDialogFragment.java  DnnApplication.java  DnnService.java  DnnServiceCallbacks.java  DnnServiceThread.java  MainActivity.java  MessagePoster.java  Poster.java
app/src/main/java/com/dnnproject/android/dnnandroidclient/clientlogic/: ClientLogic.java
app/src/main/java/com/dnnproject/android/dnnandroidclient/downloader/: DnnDataDownloader.java
app/src/main/java/com/dnnproject/android/dnnandroidclient/messageSwitch/: InOutMessageQueue.java  MessageSender.java  MessageSwitch.java
app/src/main/java/com/dnnproject/android/dnnandroidclient/messageswitch/: InOutMessageQueue.java  MessageSender.java  MessageSwitch.java
app/src/main/java/com/dnnproject/android/dnnandroidclient/tcpclient/: DnnMessageTransceiver.java  MessageReceiver.java  TcpClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/dnnproject/android/dnnandroidclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
